--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Factorises a matrix using gradient descent
 Version: 0.3.0
 Author: Daniel Oehm
 Maintainer: Daniel Oehm <danieloehm@gmail.com>
-Description: This package contains functions to factorise a matrix into two matrices, in the context of recommendations and user and item matrix. Factoristaion algorithms include FUnkSVD and alternating least squares. Also contains helper functions for testing.
+Description: This package contains functions to factorise a matrix using various methods.
 License: CC0
 Depends: 
   progress (>= 1.0.0),
