--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 S3method(plot,mf)
 export(als)
-export(matrix_factorisation)
+export(funksvd)
 export(select_test)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_line)
